# LiveTalking_fork

./: .gitignore  app.py  lipreal.py  log.txt  pyproject.toml  ttsreal.py
test/: extract_video_frame.py  play_audio_frame.py  test_yield.py  tts_cosyvoice.py  webrtc copy.py  webrtc.py
test/tts/: client.py  client_cosy.py  server.py  tts_cosyvoice.py
test/video_audio/: extract_video_audio_frame.py  play_audio_frame.py  webrtc_audio_byte.py
workflow/: webrtcapi.html.start
