[tool.poetry]
name = "livetalking-fork"
version = "0.1.0"
description = ""
authors = ["xfylsj <xfylsj@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.12.9"
numpy = "^2.2.4"
av = "^14.3.0"
aiortc = "^1.11.0"
scipy = "^1.15.2"
aiohttp = "^3.11.16"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
